--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -8,15 +8,13 @@
     <style>
         /* Reset CSS cho tất cả các phần tử */
         * {
-            margin: 0;
-            padding: 0;
+            margin: 0; padding: 0;
             box-sizing: border-box;
         }
 
         /* Định nghĩa font chữ, kích thước chữ, màu sắc và nền cho toàn bộ trang */
         body {
-            font-family: Arial, sans-serif;
-            font-size: 12px;
+            font-family: Arial, sans-serif; font-size: 12px;
             line-height: 1.3;
             color: #000;
             background: #f5f5f5;
@@ -26,8 +24,7 @@
         /* Container chính của phiếu, giới hạn chiều rộng và tạo bóng đổ */
         .container {
             max-width: 230mm; /* Kích thước A4 theo chiều ngang để chứa đủ các nút */
-            margin: 0 auto;
-            background: white;
+            margin: 0 auto; background: white;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
 
@@ -38,8 +35,7 @@
 
         /* Phần Header của phiếu: Logo, tiêu đề, số phiếu */
         .header {
-            display: flex;
-            justify-content: space-between;
+            display: flex; justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
             border-bottom: 2px solid #000;
@@ -48,16 +44,14 @@
 
         /* Tiêu đề chính của phiếu */
         .header-left h1 {
-            font-size: 24px;
-            font-weight: bold;
+            font-size: 24px; font-weight: bold;
             font-style: italic;
             margin-bottom: 5px;
         }
 
         /* Định dạng số phiếu */
         .form-number {
-            font-size: 16px;
-            font-weight: bold;
+            font-size: 16px; font-weight: bold;
         }
 
         /* Phần bên phải header chứa logo */
@@ -67,8 +61,7 @@
 
         /* Định dạng logo */
         .logo {
-            width: 80px;
-            height: 60px;
+            width: 80px; height: 60px;
             background: #000;
             display: flex;
             align-items: center;
@@ -81,34 +74,29 @@
 
         /* Phần thông tin khách hàng và xe: Chia làm 2 cột */
         .info-section {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+            display: grid; grid-template-columns: 1fr 1fr;
             gap: 20px;
             margin-bottom: 15px;
         }
 
         /* Nhóm các input field (label và input) */
         .info-group {
-            margin-bottom: 8px;
-            display: flex;
+            margin-bottom: 8px; display: flex;
             align-items: center;
             flex-wrap: wrap;
         }
 
         /* Định dạng nhãn (label) của input */
         .info-group label {
-            font-weight: bold;
-            margin-right: 5px;
+            font-weight: bold; margin-right: 5px;
             white-space: nowrap;
         }
 
         /* Định dạng chung cho các input text */
         .info-group .info-input {
-            border: none;
-            border-bottom: 1px dotted #000; /* Đường gạch dưới dạng chấm */
+            border: none; border-bottom: 1px dotted #000; /* Đường gạch dưới dạng chấm */
             flex-grow: 1; /* Cho phép input mở rộng để lấp đầy không gian */
-            padding: 0 5px;
-            font-size: 12px;
+            padding: 0 5px; font-size: 12px;
             min-width: 50px;
         }
         /* Định nghĩa chiều rộng tối thiểu cho các loại input khác nhau */
@@ -120,15 +108,13 @@
 
         /* Phần yêu cầu khách hàng và chẩn đoán ban đầu */
         .request-details {
-            margin-bottom: 13px;
-            border: 1px solid #000;
+            margin-bottom: 13px; border: 1px solid #000;
             padding: 9px;
         }
 
         /* Tiêu đề cho các phần con (ví dụ: Yêu cầu khách hàng) */
         .section-title {
-            background: #003366;
-            color: white;
+            background: #003366; color: white;
             text-align: center;
             font-weight: bold;
             padding: 5px;
@@ -142,25 +128,21 @@
 
         /* Định dạng nhãn (label) của textarea */
         .request-group label {
-            font-weight: bold;
-            display: block;
+            font-weight: bold; display: block;
             margin-bottom: 5px;
         }
 
         /* Định dạng textarea */
         .request-group textarea {
-            width: 100%;
-            border: 1px dotted #000;
+            width: 100%; border: 1px dotted #000;
             padding: 5px;
             resize: vertical; /* Cho phép thay đổi kích thước theo chiều dọc */
-            min-height: 50px;
-            font-size: 12px;
+            min-height: 50px; font-size: 12px;
         }
 
         /* Bảng chi tiết dịch vụ/vật tư */
         .detailed-service {
-            margin-top: 15px;
-            width: 100%;
+            margin-top: 15px; width: 100%;
             border-collapse: collapse; /* Các đường viền liền nhau */
             border: 2px solid #000;
         }
@@ -168,16 +150,14 @@
         /* Định dạng chung cho tiêu đề bảng và ô dữ liệu */
         .detailed-service th,
         .detailed-service td {
-            border: 1px solid #000;
-            padding: 5px;
+            border: 1px solid #000; padding: 5px;
             text-align: center;
             font-size: 11px;
         }
 
         /* Định dạng tiêu đề bảng chính */
         .detailed-service th {
-            background: #003366;
-            color: white;
+            background: #003366; color: white;
             font-weight: bold;
         }
 
@@ -192,8 +172,7 @@
         /* Định dạng input text và number trong bảng */
         .detailed-service input[type="text"],
         .detailed-service input[type="number"] {
-            width: 100%;
-            border: none;
+            width: 100%; border: none;
             text-align: center;
             padding: 2px 0;
             font-size: 11px;
@@ -201,13 +180,11 @@
         }
         /* Căn trái và in đậm cho cột hạng mục trong bảng */
         .detailed-service input[type="text"].hang-muc-input {
-            text-align: left;
-            font-weight: bold;
+            text-align: left; font-weight: bold;
         }
         /* Định dạng checkbox trong bảng */
         .detailed-service input[type="checkbox"] {
-            width: 15px;
-            height: 15px;
+            width: 15px; height: 15px;
             margin: 0 auto;
             display: block;
             vertical-align: middle;
@@ -215,15 +192,13 @@
 
         /* Định dạng hàng tổng cộng */
         .total-row {
-            background: #ccc;
-            font-weight: bold;
+            background: #ccc; font-weight: bold;
         }
 
         /* Tiêu đề danh mục trong bảng (ví dụ: Level 1, Level 2) */
         .category-header th {
             background: #e0e0e0; /* Màu nền xám nhạt */
-            color: #000;
-            font-weight: bold;
+            color: #000; font-weight: bold;
             text-align: left;
             padding: 5px 10px;
             border: 1px solid #000;
@@ -232,8 +207,7 @@
 
         /* Phần chữ ký */
         .signature-section {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+            display: grid; grid-template-columns: 1fr 1fr;
             gap: 50px;
             margin-top: 20px;
             padding-top: 15px;
@@ -244,14 +218,12 @@
 
         /* Tiêu đề "Đại lý" / "Khách hàng" */
         .signature-title {
-            font-weight: bold;
-            margin-bottom: 30px;
+            font-weight: bold; margin-bottom: 30px;
         }
 
         /* Input để nhập tên người ký */
         .signature-input {
-            border: none;
-            border-bottom: 1px dotted #000;
+            border: none; border-bottom: 1px dotted #000;
             width: 100%;
             text-align: center;
             padding: 2px 0;
@@ -261,14 +233,12 @@
 
         /* Chú thích "(Ký tên)" */
         .signature-subtitle {
-            font-size: 10px;
-            font-style: italic;
+            font-size: 10px; font-style: italic;
         }
 
         /* Phần chân trang */
         .footer {
-            margin-top: 15px;
-            font-size: 9px;
+            margin-top: 15px; font-size: 9px;
             line-height: 1.2;
             border-top: 1px solid #ccc;
             padding-top: 10px;
@@ -276,17 +246,14 @@
 
         /* Nhóm các nút chức năng ở đầu trang */
         .button-group {
-            display: flex;
-            justify-content: center;
+            display: flex; justify-content: center;
             flex-wrap: wrap; /* Cho phép các nút xuống dòng trên màn hình nhỏ */
-            gap: 10px;
-            margin-bottom: 20px;
+            gap: 10px; margin-bottom: 20px;
         }
 
         /* Định dạng chung cho tất cả các nút */
         .app-button {
-            padding: 8px 12px;
-            border: none;
+            padding: 8px 12px; border: none;
             border-radius: 5px;
             cursor: pointer;
             font-size: 14px;
@@ -302,12 +269,14 @@
         /* Màu sắc riêng cho nút In */
         .print-button {
             background: #007bff; /* Màu xanh dương */
+            color: white;
         }
         .print-button:hover { background: #0056b3; }
 
         /* Màu sắc riêng cho nút Xóa Form */
         .clear-button {
             background: #dc3545; /* Màu đỏ */
+            color: white;
         }
         .clear-button:hover { background: #c82333; }
 
@@ -316,16 +285,14 @@
             .button-group { display: none; } /* Ẩn các nút khi in */
 
             body {
-                margin: 0;
-                padding: 0;
+                margin: 0; padding: 0;
                 background: white;
                 font-size: 11px;
                 font-weight: 500;
             }
 
             .container {
-                max-width: none;
-                box-shadow: none;
+                max-width: none; box-shadow: none;
                 margin: 0;
                 padding: 0;
             }
@@ -333,8 +300,7 @@
             .form-content {
                 padding: 8mm; /* Giảm lề khi in */
                 width: 210mm; /* Kích thước A4 */
-                height: 297mm;
-                box-sizing: border-box;
+                height: 297mm; box-sizing: border-box;
                 overflow: hidden;
             }
 
@@ -355,7 +321,8 @@
             .info-group .info-input.license-km-input { min-width: 60px; }
 
             .request-details { padding: 5px; margin-bottom: 8px; }
-            .section-title { padding: 3px; font-size: 11px; margin: -5px -5px 5px -5px; }
+            .section-title { padding: 3px; font-size: 11px;
+            margin: -5px -5px 5px -5px; }
             .request-group { margin-bottom: 5px; }
             .request-group label { font-size: 10px; margin-bottom: 2px; }
             .request-group textarea { min-height: 40px; font-size: 10px; }
@@ -366,8 +333,7 @@
             .detailed-service input[type="text"].hang-muc-input { font-weight: bold; font-size: 11px; }
 
             .category-header th {
-                font-size: 10px;
-                padding: 3px 5px;
+                font-size: 10px; padding: 3px 5px;
             }
 
             .footer { font-size: 8px; margin-top: 8px; padding-top: 5px; line-height: 1.1; }
@@ -382,7 +348,8 @@
 
             /* In đậm dữ liệu nhập liệu của người dùng */
             .form-content input:not([readonly]),
-            .form-content textarea {
+            .form-content textarea,
+            .form-content select { /* Thêm select vào đây */
                 font-weight: bold !important;
             }
             .detailed-service .thanh-tien-input,
@@ -463,7 +430,16 @@
                             <label for="odometer">Số KM hiện tại:</label>
                             <input type="text" id="odometer" name="sokm" class="info-input license-km-input">
                         </div>
-                    </div>
+                        <div class="info-group">
+                            <label for="branchSelect">Chi nhánh:</label>
+                            <select id="branchSelect" name="chiNhanh" class="info-input" required>
+                                <option value="">-- Chọn chi nhánh --</option>
+                                <option value="Chi Nhánh 1 - Bình Phước">Chi Nhánh 1 - Bình Phước</option>
+                                <option value="Chi Nhánh 2 - Đồng Xoài">Chi Nhánh 2 - Đồng Xoài</option>
+                                <option value="Chi Nhánh 3 - Bình Dương">Chi Nhánh 3 - Bình Dương</option>
+                            </select>
+                        </div>
+                        </div>
                 </div>
 
                 <div class="request-details">
@@ -575,6 +551,87 @@
         const LAST_MONTH_KEY = 'serviceReceipt_lastMonth';
         const FORM_DATA_KEY = 'serviceReceipt_formData';
 
+        // Constants for branch locations
+        const branchLocations = [
+            { name: 'Chi Nhánh 1 - Bình Phước', lat: 11.5145974, lon: 106.8931262 },
+            { name: 'Chi Nhánh 2 - Đồng Xoài', lat: 11.537788, lon: 106.905191 },
+            { name: 'Chi Nhánh 3 - Bình Dương', lat: 11.004401, lon: 106.6719367 }
+        ];
+        const GEOLOCATION_ERROR_RADIUS = 100; // meters
+
+        // --- Utility Functions ---
+
+        /**
+         * Calculates the distance between two geographical points using the Haversine formula.
+         * @param {number} lat1 - Latitude of point 1 in degrees.
+         * @param {number} lon1 - Longitude of point 1 in degrees.
+         * @param {number} lat2 - Latitude of point 2 in degrees.
+         * @param {number} lon2 - Longitude of point 2 in degrees.
+         * @returns {number} Distance in meters.
+         */
+        function getDistance(lat1, lon1, lat2, lon2) {
+            const R = 6371e3; // metres
+            const φ1 = lat1 * Math.PI / 180; // φ, λ in radians
+            const φ2 = lat2 * Math.PI / 180;
+            const Δφ = (lat2 - lat1) * Math.PI / 180;
+            const Δλ = (lon2 - lon1) * Math.PI / 180;
+
+            const a = Math.sin(Δφ / 2) * Math.sin(Δφ / 2) +
+                      Math.cos(φ1) * Math.cos(φ2) *
+                      Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
+            const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+
+            const d = R * c; // in metres
+            return d;
+        }
+
+        /**
+         * Determines the closest branch based on current geolocation and automatically selects it.
+         */
+        function getClosestBranch() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                    (position) => {
+                        const userLat = position.coords.latitude;
+                        const userLon = position.coords.longitude;
+                        let closestBranch = null;
+                        let minDistance = Infinity;
+
+                        branchLocations.forEach(branch => {
+                            const distance = getDistance(userLat, userLon, branch.lat, branch.lon);
+                            if (distance < minDistance) {
+                                minDistance = distance;
+                                closestBranch = branch;
+                            }
+                        });
+
+                        const branchSelect = document.getElementById('branchSelect');
+                        if (closestBranch && minDistance <= GEOLOCATION_ERROR_RADIUS) { // Within 100 meters
+                            branchSelect.value = closestBranch.name;
+                            console.log(`Tự động chọn chi nhánh: ${closestBranch.name} (khoảng cách: ${minDistance.toFixed(2)}m)`);
+                        } else if (closestBranch) {
+                            console.log(`Chi nhánh gần nhất (${closestBranch.name}) ở ngoài bán kính cho phép (${minDistance.toFixed(2)}m > ${GEOLOCATION_ERROR_RADIUS}m). Không tự động chọn.`);
+                        } else {
+                            console.log('Không tìm thấy chi nhánh nào gần nhất.');
+                        }
+                        saveFormData(); // Save after potentially setting branch
+                    },
+                    (error) => {
+                        console.warn(`Lỗi khi lấy vị trí: ${error.message}`);
+                        alert('Không thể tự động xác định chi nhánh. Vui lòng chọn thủ công. Lỗi: ' + error.message);
+                    },
+                    {
+                        enableHighAccuracy: true,
+                        timeout: 10000,
+                        maximumAge: 0
+                    }
+                );
+            } else {
+                console.log('Trình duyệt không hỗ trợ Geolocation.');
+                alert('Trình duyệt của bạn không hỗ trợ định vị. Vui lòng chọn chi nhánh thủ công.');
+            }
+        }
+
         // Hàm tính tổng tiền cho một hàng và cập nhật tổng cộng
         function calculateRowTotal(inputElement) {
             const row = inputElement.closest('tr'); // Tìm hàng chứa input
@@ -610,7 +667,6 @@
         function resetFormAndLocalStorage() {
             const formElement = document.getElementById('serviceReceiptForm');
             const receivedDateTimeInput = document.getElementById('receivedDateTime');
-            const expectedDeliveryTimeInput = document.getElementById('expectedDeliveryTime');
 
             localStorage.removeItem(FORM_DATA_KEY); // Xóa dữ liệu form đã lưu
             formElement.reset(); // Reset tất cả các trường trong form
@@ -631,7 +687,6 @@
             let receiptNumber = parseInt(localStorage.getItem(RECEIPT_NUMBER_KEY)) || 0;
             let lastStoredMonth = null;
             let lastStoredYear = null;
-
             if (storedMonthData) {
                 try {
                     const parsedMonthData = JSON.parse(storedMonthData);
@@ -707,7 +762,6 @@
             const formData = {};
             // Lấy tất cả input, textarea, select ngoại trừ các input readonly
             const inputs = form.querySelectorAll('input:not([readonly]), textarea, select');
-
             inputs.forEach(input => {
                 if (input.name) { // Chỉ xử lý các phần tử có thuộc tính 'name'
                     if (input.type === 'checkbox') {
@@ -759,7 +813,8 @@
             initializeReceiptNumber(); // Khởi tạo số phiếu khi tải trang
             document.getElementById('receivedDateTime').value = getCurrentDateTimeLocal(); // Đặt ngày giờ nhận xe mặc định
             loadFormData(); // Tải dữ liệu form nếu có
-
+            getClosestBranch(); // Attempt to get and set closest branch on load
+            
             const form = document.getElementById('serviceReceiptForm');
             if (form) {
                 // Gán sự kiện 'input' và 'change' để lưu form tự động
@@ -787,7 +842,6 @@
 
                     // Thu thập dữ liệu form dưới dạng URL-encoded
                     const urlEncodedData = collectFormDataAsUrlEncoded(form);
-
                     // Gửi dữ liệu đến Apps Script bằng Fetch API (POST request)
                     fetch(scriptURL, {
                         method: 'POST',
