--- a/baoduong.html
+++ b/baoduong.html
@@ -253,7 +253,7 @@
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra'">📄 Phiếu KT Xe </button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieu_kiem_tra_lop.html'">📄 Phiếu KT Lốp</button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/kiemtragam.html'">📄 Phiếu Kiểm Gầm</button>
-            <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/baoduong.html'">📄 Phiếu Bảo Dưỡng</button>
+            <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieunhandichvu.html'">📄 Phiếu Nhận Dịch Vụ</button>
             <button class="app-button" id="submitToSheet">📤 Gửi Thông Tin</button>
             <button class="app-button clear-button" id="clearFormButton">🗑️ Xóa Form</button>
         </div>
