--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -72,7 +72,7 @@
         .controls { padding: 20px; background: #f8f9fa; border-top: 1px solid #ddd; }
         .control-group { margin-bottom: 15px; }
         .control-group label { display: block; margin-bottom: 5px; font-weight: bold; }
-        .control-group input, .control-group select { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; }
+        .control-group input, .control-group select, .control-group textarea { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; }
         .tire-inputs { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; margin-bottom: 10px; }
         .tire-input-group { border: 1px solid #ddd; padding: 5px; border-radius: 4px; background: white; }
         .tire-input-group h4 { margin-bottom: 10px; text-align: center; color: #4472C4; }
@@ -323,7 +323,21 @@
                         <label><input type="checkbox" name="rec_thaythe" data-rec-id="thay-the"> Thay thế</label>
                     </div>
                 </div>
-            </form>
+
+                <h3 style="margin: 15px 0 10px 0; color: #4472C4; font-size: 12px;">Thông số Bố Thắng:</h3>
+                <div class="control-group">
+                    <label for="frontBrakePadInput">Bố thắng trước (mm):</label>
+                    <input type="number" id="frontBrakePadInput" name="front_brake_pad" placeholder="Nhập độ dày bố thắng trước (mm)" step="0.1">
+                </div>
+                <div class="control-group">
+                    <label for="rearBrakePadInput">Bố thắng sau (mm):</label>
+                    <input type="number" id="rearBrakePadInput" name="rear_brake_pad" placeholder="Nhập độ dày bố thắng sau (mm)" step="0.1">
+                </div>
+                <div class="control-group">
+                    <label for="brakeRecommendationInput">Khuyến cáo bố thắng:</label>
+                    <textarea id="brakeRecommendationInput" name="brake_recommendation" placeholder="Nhập khuyến cáo về bố thắng"></textarea>
+                </div>
+                </form>
         </div>
 
         <div class="controls">
@@ -334,7 +348,6 @@
                 <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/baoduong.html'">📄 Phiếu Bảo Dưỡng</button>
                 <button class="btn btn-primary" id="updatePreviewBtn">Cập nhật xem trước</button>
                 <button class="btn btn-success" id="submitFormBtn">📤 Gửi Thông Tin</button>
- 
             </div>
         </div>
 
@@ -497,7 +510,7 @@
                             <text x="24" y="15" text-anchor="middle" id="spare-brand-display"></text>
                         </g>
                     </g>
-                   
+                    
                     <text x="160" y="95" text-anchor="start" font-size="6" fill="#4472C4" transform="rotate(90, 160, 95)">Áp suất khuyến cáo</text>
                     <text x="160" y="195" text-anchor="start" font-size="6" fill="#4472C4" transform="rotate(90, 160, 195)">Áp suất khuyến cáo</text>
 
@@ -516,7 +529,18 @@
                     <span style="font-weight: bold;">HIỆN TRẠNG LỐP:</span>
                     <span style="border-bottom: 1px dotted #333; display: inline-block; min-width: 200px; margin-left: 5px;" id="condition-display"></span>
                 </div>
-            </div>
+
+                <div id="brake-pad-section" style="margin-bottom: 8px;">
+                    <span style="font-weight: bold;">BỐ THẮNG TRƯỚC:</span>
+                    <span style="border-bottom: 1px dotted #333; display: inline-block; min-width: 50px; margin-left: 5px;" id="front-brake-pad-display"></span> mm
+                    <span style="font-weight: bold; margin-left: 15px;">BỐ THẮNG SAU:</span>
+                    <span style="border-bottom: 1px dotted #333; display: inline-block; min-width: 50px; margin-left: 5px;" id="rear-brake-pad-display"></span> mm
+                    <div style="margin-top: 5px;">
+                        <span style="font-weight: bold;">KHUYẾN CÁO BỐ THẮNG:</span>
+                        <span style="border-bottom: 1px dotted #333; display: inline-block; min-width: 200px; margin-left: 5px;" id="brake-recommendation-display"></span>
+                    </div>
+                </div>
+                </div>
 
             <div class="info-section">
                 <div>
@@ -793,6 +817,16 @@
             document.getElementById('spare-dot-display').textContent = 'DOT: ' + spareDot;
             document.getElementById('spare-brand-display').textContent = spareBrand;
 
+            // Update Brake Pad measurements
+            const frontBrakePad = parseFloat(document.getElementById('frontBrakePadInput').value) || 0;
+            const rearBrakePad = parseFloat(document.getElementById('rearBrakePadInput').value) || 0;
+            const brakeRecommendation = document.getElementById('brakeRecommendationInput').value || '';
+
+            document.getElementById('front-brake-pad-display').textContent = frontBrakePad.toFixed(1);
+            document.getElementById('rear-brake-pad-display').textContent = rearBrakePad.toFixed(1);
+            document.getElementById('brake-recommendation-display').textContent = brakeRecommendation;
+
+
             // Update recommendations (including new checkbox logic)
             updateRecommendations();
         }
@@ -984,4 +1018,3 @@
     </script>
 </body>
 </html>
-
